test/vm/errors/parser/unexpected_token_expr.ach
// Parser error: unexpected token where expression expected
// Expected: "expected expression, found ..."

let x = * 5
